Complete Tech Challenge - Part I

--- a/html-and-css-prototype/index.html
+++ b/html-and-css-prototype/index.html
@@ -12,6 +12,31 @@
     </div>
 
     <!-- Your code goes here -->
+    <div class="grid-container">
+      <div class="grid-item amount-left sb"><b>$167</b> still needed for this project</div>
+
+      <div class="grid-item center-grid">
+        <div class="bar">
+        <div class="red-bar"></div>
+        </div>
+        <div class="donate-grid">
+        <div class="donate-text"><p><b style="color:#EE5E39">Only 3 days left</b> to fund this project.</p>
+        <p>Join the <b>42</b> other donors who have already supported this project. Every dollar helps.</p>
+        </div>
+
+        <div class="money-box-left">$ <b  style="color:black;">50</b></div>
+
+
+
+
+        <div class="money-box-right">Give Now</div>
+        <div class="donate-text2">Why give $50?</div>
+          </div>
+        </div>
+
+      <div class="grid-item small-box-left"><b>Save for later</b></div>
+      <div class="grid-item small-box-right"><b>Tell your friends</b></div>
+    </div>
 
 
 
